[package]
name = "anya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
ratatui-textarea = "*"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.190"
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
