[package]
name = "anya"
version = "0.1.102"
authors = ["Nevio Gomez <neviogomez91@gmail.com>"]
description = """
  anya is a lightweight TUI HTTP client application to test
  GET and POST endpoints with or without a JSON body.
"""
documentation = "https://github.com/Ngz91/anya"
homepage = "https://github.com/Ngz91/anya"
repository = "https://github.com/Ngz91/anya"
keywords = ["tui", "http-client"]
categories = ["command-line-utilities", "http-client"]
license = "MIT"
edition = "2021"
rust-version = "1.76.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
tui-textarea = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.190"
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "anya"
path = "src/main.rs"
test = false
bench = false
